avatar display on correct side. Need to have it overlap instead of pushing down.

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -24,6 +24,12 @@
   width: 150px;
 }
 
+#avatar-menu-container {
+  margin-top: 100px;
+  display: flex;
+  justify-content: flex-end;
+}
+
 @media only screen and (max-width: 450px) {
   #nav-bar {
     top: 100px;
